DeathStarBench-6970bda1235bcc74ee798d1e8fef97bab6c902a2/socialNetwork/k8s-yaml/media-frontend.yaml
---
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app-name: media-frontend
    death-star-project: social-network
  name: media-frontend
  namespace: social-network
spec: 
  ports: 
    - 
      port: 80
      targetPort: 80
      
  selector: 
    app-name: media-frontend
    death-star-project: social-network
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-frontend
  labels:
    death-star-project: social-network
    app-name: media-frontend
  namespace: social-network
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: social-network
      app-name: media-frontend
  template:
    metadata:
      labels: 
        death-star-project: social-network
        app-name: media-frontend
      name: media-frontend
    spec:
      containers:
      - name: media-frontend
        image: yg397/media-frontend:xenial
         # env:
          #- name: COLLECTOR_ZIPKIN_HTTP_PORT
            #value: "9411"
        ports: 
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/local/openresty/nginx/lua-scripts
          name: lua-scripts
        - mountPath: /usr/local/openresty/nginx/conf/nginx
          name: nginx-conf
      restartPolicy: Always
      volumes:
      - name: lua-scripts
        hostPath: 
          path: /root/DeathStarBench/socialNetwork/media-frontend/lua-scripts-k8s
          #type: Directory
      - name: nginx-conf
        hostPath: 
          path: /root/DeathStarBench/socialNetwork/media-frontend/conf/nginx-k8s
          #type: Directory
