DeathStarBench-6970bda1235bcc74ee798d1e8fef97bab6c902a2/socialNetwork/k8s-yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
   
kind: Ingress
   
metadata:
   
  name: example-ingress
   
  annotations:
   
    nginx.ingress.kubernetes.io/rewrite-target: /$1
   
spec:
   
  rules:
   
    - host: nginx.info
   
      http:
   
        paths:
   
          - path: /
   
            pathType: Prefix
   
            backend:
   
              service:
   
                name: nginx-thrift
   
                port:
   
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: media-frontend
                port:
                  number: 8080
